// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CacheParameters /> should rander when [hash=null] 1`] = `
<Panel>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    Trim Parameters
  </PanelHeading>
  <Table>
    <tbody />
  </Table>
</Panel>
`;

exports[`<CacheParameters /> should render 1`] = `
<Panel>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    Trim Parameters
  </PanelHeading>
  <Table>
    <tbody>
      <tr
        key="0"
      >
        <Parameters__CacheParameterKey>
          0
        </Parameters__CacheParameterKey>
        <td>
          f
        </td>
      </tr>
      <tr
        key="1"
      >
        <Parameters__CacheParameterKey>
          1
        </Parameters__CacheParameterKey>
        <td>
          o
        </td>
      </tr>
      <tr
        key="2"
      >
        <Parameters__CacheParameterKey>
          2
        </Parameters__CacheParameterKey>
        <td>
          o
        </td>
      </tr>
    </tbody>
  </Table>
</Panel>
`;
